--- a/config/database.yml
+++ b/config/database.yml
@@ -39,24 +39,24 @@ production:
 # And be sure to use new-style password hashing:
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
-#default: &default
-#  adapter: mysql2
-#  encoding: utf8
-#  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-#  username: root
-#  password:
-#  socket: /tmp/mysql.sock
+default: &default
+  adapter: mysql2
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password:
+  socket: /tmp/mysql.sock
 
-#development:
-#  <<: *default
-#  database: shoefit_pro_development
+development:
+  <<: *default
+  database: shoefit_pro_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-#  <<: *default
-#  database: shoefit_pro_test
+test:
+  <<: *default
+  database: shoefit_pro_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
